--- a/work/toward-driver/app/src/main/res/values/strings.xml
+++ b/work/toward-driver/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">toward(driver)</string>
+    <string name="app_name">Toward-driver</string>
+    <string name="kakao_app_key">2cea0fe5d9360612e36031de70505e90</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
